a ton of fixes
